# news-classifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  minimo_teste_check.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
notebooks/: 01_eda.ipynb  02_experimento_transformers.ipynb  03_avaliacao_e_interpretabilidade.ipynb
src/news_classifier/: config.py  evaluate.py  preprocessing.py  split.py  train.py  train01.py
tests/: test_api.py  test_preprocessing.py  test_split.py
