[project]
name = "news-classifier"
version = "0.1.0"
description = "Classificador de categorias de notícias - Folha de S.Paulo"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]